ability to post threads and restrict access

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <title>Empyrion Factions</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" herf="css/boosstrap-grid.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" herf="/css/boosstrap-grid.css">
+<link rel="stylesheet" href="/css/style.css">
